# HeadMod

./: .gitignore  Cargo.toml  README.md  sync_db.sh
migrations/: 20260319000000_init.sql  20260319000001_automod_updates.sql  20260319000002_audit_logs.sql  20260319000003_automod_caps.sql  20260319000004_alt_detection.sql  20260319000005_tickets_v2.sql  20260319000006_role_persistence.sql  20260320000001_strike_rules.sql  20260320000002_reports.sql  20260320000003_temp_roles.sql  20260320000004_protection_suite.sql  20260320000005_report_resolution.sql  20260320000006_summary_tracking.sql  20260320000007_global_intel.sql  20260320000008_channel_neural.sql  20260320000009_engagement_config.sql
src/: background_jobs.rs  logging.rs  main.rs  types.rs
src/commands/: announcements.rs  config.rs  embeds.rs  general.rs  mod.rs  moderation.rs  moderation2.rs  tickets.rs
src/commands/moderation/: actions.rs  ban.rs  case.rs  emergency.rs  filters.rs  history.rs  kick.rs  lockdown.rs  logs.rs  mod.rs  mod_center.rs  purge.rs  report.rs  role.rs  stats.rs  tempban.rs  timeout.rs  unban.rs  utility.rs  warn.rs  whois.rs
src/events/: automod.rs  interaction.rs  member.rs  message_log.rs  mod.rs  persistence.rs
src/logging/: mod.rs
