[package]
name = "head-mod"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = "0.4.44"
dashmap = "6.1.0"
